Package_Tools/include-C/ssh/libssh_xxxx/libssh.h

  typedef int mode_t;
typedef struct ssh_counter_struct *ssh_counter;
typedef struct ssh_channel_struct* ssh_channel;
typedef struct ssh_message_struct* ssh_message;
typedef struct ssh_pcap_file_struct* ssh_pcap_file;
typedef struct ssh_key_struct* ssh_key;
typedef struct ssh_session_struct* ssh_session;
typedef struct ssh_string_struct* ssh_string;
typedef void* ssh_gssapi_creds;
typedef SOCKET socket_t;
typedef int socket_t;
/* some types for keys */
enum ssh_keytypes_e{
  SSH_KEYTYPE_UNKNOWN=0,
  SSH_KEYTYPE_DSS=1,
  SSH_KEYTYPE_RSA,
  SSH_KEYTYPE_RSA1,
  SSH_KEYTYPE_ECDSA, /* deprecated */
  SSH_KEYTYPE_ED25519,
  SSH_KEYTYPE_DSS_CERT01,
  SSH_KEYTYPE_RSA_CERT01,
  SSH_KEYTYPE_ECDSA_P256,
  SSH_KEYTYPE_ECDSA_P384,
  SSH_KEYTYPE_ECDSA_P521,
  SSH_KEYTYPE_ECDSA_P256_CERT01,
  SSH_KEYTYPE_ECDSA_P384_CERT01,
  SSH_KEYTYPE_ECDSA_P521_CERT01,
  SSH_KEYTYPE_ED25519_CERT01,
  SSH_KEYTYPE_SK_ECDSA,
  SSH_KEYTYPE_SK_ECDSA_CERT01,
  SSH_KEYTYPE_SK_ED25519,
  SSH_KEYTYPE_SK_ED25519_CERT01,
};
enum ssh_keycmp_e {
  SSH_KEY_CMP_PUBLIC = 0,
  SSH_KEY_CMP_PRIVATE
};
struct ssh_knownhosts_entry {
    char *hostname;
    char *unparsed;
    ssh_key publickey;
    char *comment;
};
/** @} */

enum ssh_options_e {
  SSH_OPTIONS_HOST,
  SSH_OPTIONS_PORT,
  SSH_OPTIONS_PORT_STR,
  SSH_OPTIONS_FD,
  SSH_OPTIONS_USER,
  SSH_OPTIONS_SSH_DIR,
  SSH_OPTIONS_IDENTITY,
  SSH_OPTIONS_ADD_IDENTITY,
  SSH_OPTIONS_KNOWNHOSTS,
  SSH_OPTIONS_TIMEOUT,
  SSH_OPTIONS_TIMEOUT_USEC,
  SSH_OPTIONS_SSH1,
  SSH_OPTIONS_SSH2,
  SSH_OPTIONS_LOG_VERBOSITY,
  SSH_OPTIONS_LOG_VERBOSITY_STR,
  SSH_OPTIONS_CIPHERS_C_S,
  SSH_OPTIONS_CIPHERS_S_C,
  SSH_OPTIONS_COMPRESSION_C_S,
  SSH_OPTIONS_COMPRESSION_S_C,
  SSH_OPTIONS_PROXYCOMMAND,
  SSH_OPTIONS_BINDADDR,
  SSH_OPTIONS_STRICTHOSTKEYCHECK,
  SSH_OPTIONS_COMPRESSION,
  SSH_OPTIONS_COMPRESSION_LEVEL,
  SSH_OPTIONS_KEY_EXCHANGE,
  SSH_OPTIONS_HOSTKEYS,
  SSH_OPTIONS_GSSAPI_SERVER_IDENTITY,
  SSH_OPTIONS_GSSAPI_CLIENT_IDENTITY,
  SSH_OPTIONS_GSSAPI_DELEGATE_CREDENTIALS,
  SSH_OPTIONS_HMAC_C_S,
  SSH_OPTIONS_HMAC_S_C,
  SSH_OPTIONS_PASSWORD_AUTH,
  SSH_OPTIONS_PUBKEY_AUTH,
  SSH_OPTIONS_KBDINT_AUTH,
  SSH_OPTIONS_GSSAPI_AUTH,
  SSH_OPTIONS_GLOBAL_KNOWNHOSTS,
  SSH_OPTIONS_NODELAY,
  SSH_OPTIONS_PUBLICKEY_ACCEPTED_TYPES,
  SSH_OPTIONS_PROCESS_CONFIG,
  SSH_OPTIONS_REKEY_DATA,
  SSH_OPTIONS_REKEY_TIME,
  SSH_OPTIONS_RSA_MIN_SIZE,
  SSH_OPTIONS_IDENTITY_AGENT,
};
enum ssh_publickey_hash_type {
    SSH_PUBLICKEY_HASH_SHA1,
    SSH_PUBLICKEY_HASH_MD5,
    SSH_PUBLICKEY_HASH_SHA256
};
extern int ssh_get_random(void *where,int len,int strong);
extern int ssh_get_version(ssh_session session);
extern int ssh_get_status(ssh_session session);
extern int ssh_get_poll_flags(ssh_session session);
extern int ssh_init(void);
extern int ssh_is_blocking(ssh_session session);
extern int ssh_is_connected(ssh_session session);
/* KNOWN HOSTS */
extern void ssh_knownhosts_entry_free(struct ssh_knownhosts_entry *entry);
// xxxxxxxxxxxxx
/*
extern int ssh_known_hosts_parse_line(const char *host,
                                          const char *line,
                                          struct ssh_knownhosts_entry **entry);
extern enum ssh_known_hosts_e ssh_session_has_known_hosts_entry(ssh_session session);

extern int ssh_session_export_known_hosts_entry(ssh_session session,
                                                    char **pentry_string);
extern int ssh_session_update_known_hosts(ssh_session session);

extern enum ssh_known_hosts_e ssh_session_get_known_hosts_entry(ssh_session session,
        struct ssh_knownhosts_entry **pentry);
extern enum ssh_known_hosts_e ssh_session_is_known_server(ssh_session session);

/* LOGGING */
extern int ssh_set_log_level(int level);
extern int ssh_get_log_level(void);
extern void *ssh_get_log_userdata(void);
extern int ssh_set_log_userdata(void *data);
extern void ssh_vlog(int verbosity,
                         const char *function,
                         const char *format,
                         va_list *va) ;
extern void _ssh_log(int verbosity,
                         const char *function,
                         const char *format, ...) ;
/* legacy */
/*SSH_DEPRECATED*/ extern void ssh_log(ssh_session session,
                                       int prioriry,
                                       const char *format, ...);
extern ssh_channel ssh_message_channel_request_open_reply_accept(ssh_message msg);
extern int ssh_message_channel_request_open_reply_accept_channel(ssh_message msg, ssh_channel chan);
extern int ssh_message_channel_request_reply_success(ssh_message msg);
extern void ssh_message_free(ssh_message msg);
extern ssh_message ssh_message_get(ssh_session session);
extern int ssh_message_subtype(ssh_message msg);
extern int ssh_message_type(ssh_message msg);
extern int ssh_mkdir (const char *pathname, mode_t mode);
extern ssh_session ssh_new(void);
extern int ssh_options_copy(ssh_session src, ssh_session *dest);
extern int ssh_options_getopt(ssh_session session, int *argcptr, char **argv);
extern int ssh_options_parse_config(ssh_session session, const char *filename);
extern int ssh_options_set(ssh_session session, enum ssh_options_e type,
    const void *value);
extern int ssh_options_get(ssh_session session, enum ssh_options_e type,
    char **value);
extern int ssh_options_get_port(ssh_session session, unsigned int * port_target);
extern int ssh_pcap_file_close(ssh_pcap_file pcap);
extern void ssh_pcap_file_free(ssh_pcap_file pcap);
extern ssh_pcap_file ssh_pcap_file_new(void);
extern int ssh_pcap_file_open(ssh_pcap_file pcap, const char *filename);
/**
 * @addtogroup libssh_auth
 *
 * @{
 */

/**
 * @brief SSH authentication callback for password and publickey auth.
 *
 * @param prompt        Prompt to be displayed.
 * @param buf           Buffer to save the password. You should null-terminate it.
 * @param len           Length of the buffer.
 * @param echo          Enable or disable the echo of what you type.
 * @param verify        Should the password be verified?
 * @param userdata      Userdata to be passed to the callback function. Useful
 *                      for GUI applications.
 *
 * @return              0 on success, < 0 on error.
 */
typedef int (*ssh_auth_callback) (const char *prompt, char *buf, size_t len,
    int echo, int verify, void *userdata);
/** @} */

extern ssh_key ssh_key_new(void);
extern void ssh_key_free (ssh_key key);
extern enum ssh_keytypes_e ssh_key_type(const ssh_key key);
extern const char *ssh_key_type_to_char(enum ssh_keytypes_e type);
extern enum ssh_keytypes_e ssh_key_type_from_name(const char *name);
extern int ssh_key_is_public(const ssh_key k);
extern int ssh_key_is_private(const ssh_key k);
extern int ssh_key_cmp(const ssh_key k1,
                           const ssh_key k2,
                           enum ssh_keycmp_e what);
extern ssh_key ssh_key_dup(const ssh_key key);
extern int ssh_pki_generate(enum ssh_keytypes_e type, int parameter,
        ssh_key *pkey);
extern int ssh_pki_import_privkey_base64(const char *b64_key,
                                             const char *passphrase,
                                             ssh_auth_callback auth_fn,
                                             void *auth_data,
                                             ssh_key *pkey);
extern int ssh_pki_export_privkey_base64(const ssh_key privkey,
                                             const char *passphrase,
                                             ssh_auth_callback auth_fn,
                                             void *auth_data,
                                             char **b64_key);
extern int ssh_pki_import_privkey_file(const char *filename,
                                           const char *passphrase,
                                           ssh_auth_callback auth_fn,
                                           void *auth_data,
                                           ssh_key *pkey);
extern int ssh_pki_export_privkey_file(const ssh_key privkey,
                                           const char *passphrase,
                                           ssh_auth_callback auth_fn,
                                           void *auth_data,
                                           const char *filename);
extern int ssh_pki_copy_cert_to_privkey(const ssh_key cert_key,
                                            ssh_key privkey);
extern int ssh_pki_import_pubkey_base64(const char *b64_key,
                                             ssh_keytypes_e type,
                                            ssh_key *pkey);
extern int ssh_pki_import_pubkey_file(const char *filename,
                                          ssh_key *pkey);
extern int ssh_pki_import_cert_base64(const char *b64_cert,
                                          ssh_keytypes_e type,
                                          ssh_key *pkey);
extern int ssh_pki_import_cert_file(const char *filename,
                                        ssh_key *pkey);
extern int ssh_pki_export_privkey_to_pubkey(const ssh_key privkey,
                                                ssh_key *pkey);
extern int ssh_pki_export_pubkey_base64(const ssh_key key,
                                            char **b64_key);
extern int ssh_pki_export_pubkey_file(const ssh_key key,
                                          const char *filename);
extern const char *ssh_pki_key_ecdsa_name(const ssh_key key);
extern char *ssh_get_fingerprint_hash(ssh_publickey_hash_type type,
                                          unsigned char *hash,
                                          size_t len);
extern void ssh_print_hash( ssh_publickey_hash_type type, unsigned char *hash, size_t len);
extern int ssh_send_ignore (ssh_session session, const char *data);
extern int ssh_send_debug (ssh_session session, const char *message, int always_display);
extern void ssh_gssapi_set_creds(ssh_session session, const ssh_gssapi_creds creds);
extern int ssh_select(ssh_channel *channels, ssh_channel *outchannels, socket_t maxfd,
    fd_set *readfds, struct timeval *timeout);
extern int ssh_service_request(ssh_session session, const char *service);
extern int ssh_set_agent_channel(ssh_session session, ssh_channel channel);
extern int ssh_set_agent_socket(ssh_session session, socket_t fd);
extern void ssh_set_blocking(ssh_session session, int blocking);
extern void ssh_set_counters(ssh_session session, ssh_counter scounter,
                                 ssh_counter rcounter);
extern void ssh_set_fd_except(ssh_session session);
extern void ssh_set_fd_toread(ssh_session session);
extern void ssh_set_fd_towrite(ssh_session session);
extern void ssh_silent_disconnect(ssh_session session);
extern int ssh_set_pcap_file(ssh_session session, ssh_pcap_file pcapfile);
/* USERAUTH */
extern int ssh_userauth_none(ssh_session session, const char *username);
extern int ssh_userauth_list(ssh_session session, const char *username);
extern int ssh_userauth_try_publickey(ssh_session session,
                                          const char *username,
                                          const ssh_key pubkey);
extern int ssh_userauth_publickey(ssh_session session,
                                      const char *username,
                                      const ssh_key privkey);
extern int ssh_userauth_agent(ssh_session session,
                                  const char *username);
extern int ssh_userauth_publickey_auto_get_current_identity(ssh_session session,
                                                                char** value);
extern int ssh_userauth_publickey_auto(ssh_session session,
                                           const char *username,
                                           const char *passphrase);
extern int ssh_userauth_password(ssh_session session,
                                     const char *username,
                                     const char *password);
extern int ssh_userauth_kbdint(ssh_session session, const char *user, const char *submethods);
extern const char *ssh_userauth_kbdint_getinstruction(ssh_session session);
extern const char *ssh_userauth_kbdint_getname(ssh_session session);
extern int ssh_userauth_kbdint_getnprompts(ssh_session session);
extern const char *ssh_userauth_kbdint_getprompt(ssh_session session, unsigned int i, char *echo);
extern int ssh_userauth_kbdint_getnanswers(ssh_session session);
extern const char *ssh_userauth_kbdint_getanswer(ssh_session session, unsigned int i);
extern int ssh_userauth_kbdint_setanswer(ssh_session session, unsigned int i,
    const char *answer);
extern int ssh_userauth_gssapi(ssh_session session);
extern const char *ssh_version(int req_version);
extern void ssh_string_burn(ssh_string str);
extern ssh_string ssh_string_copy(ssh_string str);
extern void *ssh_string_data(ssh_string str);
extern int ssh_string_fill(ssh_string str, const void *data, size_t len);
extern void ssh_string_free(ssh_string str);
extern ssh_string ssh_string_from_char(const char *what);
extern size_t ssh_string_len(ssh_string str);
extern ssh_string ssh_string_new(size_t size);
extern const char *ssh_string_get_char(ssh_string str);
extern char *ssh_string_to_char(ssh_string str);
extern void ssh_string_free_char(char *s);
extern int ssh_getpass(const char *prompt, char *buf, size_t len, int echo,
    int verify);