Packages_2024/libssh_0.10.6/libssh/libssh_.inc


function ssh_get_random(where: pointer; len: longint; strong: longint): longint; cdecl; external libssh;
function ssh_get_version(session: Tssh_session): longint; cdecl; external libssh;
function ssh_get_status(session: Tssh_session): longint; cdecl; external libssh;
function ssh_get_poll_flags(session: Tssh_session): longint; cdecl; external libssh;
function ssh_init: longint; cdecl; external libssh;
function ssh_is_blocking(session: Tssh_session): longint; cdecl; external libssh;
function ssh_is_connected(session: Tssh_session): longint; cdecl; external libssh;
procedure ssh_knownhosts_entry_free(entry: Pssh_knownhosts_entry); cdecl; external libssh;
function ssh_known_hosts_parse_line(host: pchar; line: pchar; entry: PPssh_knownhosts_entry): longint; cdecl; external libssh;
function ssh_session_has_known_hosts_entry(session: Tssh_session): Tssh_known_hosts_e; cdecl; external libssh;
function ssh_session_export_known_hosts_entry(session: Tssh_session; pentry_string: PPchar): longint; cdecl; external libssh;
function ssh_session_update_known_hosts(session: Tssh_session): longint; cdecl; external libssh;
function ssh_session_get_known_hosts_entry(session: Tssh_session; pentry: PPssh_knownhosts_entry): Tssh_known_hosts_e; cdecl; external libssh;
function ssh_session_is_known_server(session: Tssh_session): Tssh_known_hosts_e; cdecl; external libssh;
function ssh_set_log_level(level: longint): longint; cdecl; external libssh;
function ssh_get_log_level: longint; cdecl; external libssh;
function ssh_get_log_userdata: pointer; cdecl; external libssh;
function ssh_set_log_userdata(data: pointer): longint; cdecl; external libssh;
procedure ssh_vlog(verbosity: longint; _function: pchar; format: pchar; va: Pva_list); cdecl; external libssh;
procedure _ssh_log(verbosity: longint; _function: pchar; format: pchar; args: array of const); cdecl; external libssh;
procedure _ssh_log(verbosity: longint; _function: pchar; format: pchar); cdecl; external libssh;
procedure ssh_log(session: Tssh_session; prioriry: longint; format: pchar; args: array of const); cdecl; external libssh; deprecated;
procedure ssh_log(session: Tssh_session; prioriry: longint; format: pchar); cdecl; external libssh;
function ssh_message_channel_request_open_reply_accept(msg: Tssh_message): Tssh_channel; cdecl; external libssh;
function ssh_message_channel_request_open_reply_accept_channel(msg: Tssh_message; chan: Tssh_channel): longint; cdecl; external libssh;
function ssh_message_channel_request_reply_success(msg: Tssh_message): longint; cdecl; external libssh;
procedure ssh_message_free(msg: Tssh_message); cdecl; external libssh;
function ssh_message_get(session: Tssh_session): Tssh_message; cdecl; external libssh;
function ssh_message_subtype(msg: Tssh_message): longint; cdecl; external libssh;
function ssh_message_type(msg: Tssh_message): longint; cdecl; external libssh;
function ssh_mkdir(pathname: pchar; mode: Tmode_t): longint; cdecl; external libssh;
function ssh_new: Tssh_session; cdecl; external libssh;
function ssh_options_copy(src: Tssh_session; dest: Pssh_session): longint; cdecl; external libssh;
function ssh_options_getopt(session: Tssh_session; argcptr: Plongint; argv: PPchar): longint; cdecl; external libssh;
function ssh_options_parse_config(session: Tssh_session; filename: pchar): longint; cdecl; external libssh;
function ssh_options_set(session: Tssh_session; _type: Tssh_options_e; value: pointer): longint; cdecl; external libssh;
function ssh_options_get(session: Tssh_session; _type: Tssh_options_e; value: PPchar): longint; cdecl; external libssh;
function ssh_options_get_port(session: Tssh_session; port_target: Pdword): longint; cdecl; external libssh;
function ssh_pcap_file_close(pcap: Tssh_pcap_file): longint; cdecl; external libssh;
procedure ssh_pcap_file_free(pcap: Tssh_pcap_file); cdecl; external libssh;
function ssh_pcap_file_new: Tssh_pcap_file; cdecl; external libssh;
function ssh_pcap_file_open(pcap: Tssh_pcap_file; filename: pchar): longint; cdecl; external libssh;

type
  Tssh_auth_callback = function(prompt: pchar; buf: pchar; len: Tsize_t; echo: longint; verify: longint; userdata: pointer): longint; cdecl;

function ssh_key_new: Tssh_key; cdecl; external libssh;
procedure ssh_key_free(key: Tssh_key); cdecl; external libssh;
function ssh_key_type(key: Tssh_key): Tssh_keytypes_e; cdecl; external libssh;
function ssh_key_type_to_char(_type: Tssh_keytypes_e): pchar; cdecl; external libssh;
function ssh_key_type_from_name(name: pchar): Tssh_keytypes_e; cdecl; external libssh;
function ssh_key_is_public(k: Tssh_key): longint; cdecl; external libssh;
function ssh_key_is_private(k: Tssh_key): longint; cdecl; external libssh;
function ssh_key_cmp(k1: Tssh_key; k2: Tssh_key; what: Tssh_keycmp_e): longint; cdecl; external libssh;
function ssh_key_dup(key: Tssh_key): Tssh_key; cdecl; external libssh;
function ssh_pki_generate(_type: Tssh_keytypes_e; parameter: longint; pkey: Pssh_key): longint; cdecl; external libssh;
function ssh_pki_import_privkey_base64(b64_key: pchar; passphrase: pchar; auth_fn: Tssh_auth_callback; auth_data: pointer; pkey: Pssh_key): longint; cdecl; external libssh;
function ssh_pki_export_privkey_base64(privkey: Tssh_key; passphrase: pchar; auth_fn: Tssh_auth_callback; auth_data: pointer; b64_key: PPchar): longint; cdecl; external libssh;
function ssh_pki_import_privkey_file(filename: pchar; passphrase: pchar; auth_fn: Tssh_auth_callback; auth_data: pointer; pkey: Pssh_key): longint; cdecl; external libssh;
function ssh_pki_export_privkey_file(privkey: Tssh_key; passphrase: pchar; auth_fn: Tssh_auth_callback; auth_data: pointer; filename: pchar): longint; cdecl; external libssh;
function ssh_pki_copy_cert_to_privkey(cert_key: Tssh_key; privkey: Tssh_key): longint; cdecl; external libssh;
function ssh_pki_import_pubkey_base64(b64_key: pchar; _type: Tssh_keytypes_e; pkey: Pssh_key): longint; cdecl; external libssh;
function ssh_pki_import_pubkey_file(filename: pchar; pkey: Pssh_key): longint; cdecl; external libssh;
function ssh_pki_import_cert_base64(b64_cert: pchar; _type: Tssh_keytypes_e; pkey: Pssh_key): longint; cdecl; external libssh;
function ssh_pki_import_cert_file(filename: pchar; pkey: Pssh_key): longint; cdecl; external libssh;
function ssh_pki_export_privkey_to_pubkey(privkey: Tssh_key; pkey: Pssh_key): longint; cdecl; external libssh;
function ssh_pki_export_pubkey_base64(key: Tssh_key; b64_key: PPchar): longint; cdecl; external libssh;
function ssh_pki_export_pubkey_file(key: Tssh_key; filename: pchar): longint; cdecl; external libssh;
function ssh_pki_key_ecdsa_name(key: Tssh_key): pchar; cdecl; external libssh;
function ssh_get_fingerprint_hash(_type: Tssh_publickey_hash_type; hash: pbyte; len: Tsize_t): pchar; cdecl; external libssh;
procedure ssh_print_hash(_type: Tssh_publickey_hash_type; hash: pbyte; len: Tsize_t); cdecl; external libssh;
function ssh_send_ignore(session: Tssh_session; data: pchar): longint; cdecl; external libssh;
function ssh_send_debug(session: Tssh_session; message: pchar; always_display: longint): longint; cdecl; external libssh;
procedure ssh_gssapi_set_creds(session: Tssh_session; creds: Tssh_gssapi_creds); cdecl; external libssh;
function ssh_select(channels: Pssh_channel; outchannels: Pssh_channel; maxfd: Tsocket_t; readfds: Pfd_set; timeout: Ptimeval): longint; cdecl; external libssh;
function ssh_service_request(session: Tssh_session; service: pchar): longint; cdecl; external libssh;
function ssh_set_agent_channel(session: Tssh_session; channel: Tssh_channel): longint; cdecl; external libssh;
function ssh_set_agent_socket(session: Tssh_session; fd: Tsocket_t): longint; cdecl; external libssh;
procedure ssh_set_blocking(session: Tssh_session; blocking: longint); cdecl; external libssh;
procedure ssh_set_counters(session: Tssh_session; scounter: Pssh_counter; rcounter: Pssh_counter); cdecl; external libssh;
procedure ssh_set_fd_except(session: Tssh_session); cdecl; external libssh;
procedure ssh_set_fd_toread(session: Tssh_session); cdecl; external libssh;
procedure ssh_set_fd_towrite(session: Tssh_session); cdecl; external libssh;
procedure ssh_silent_disconnect(session: Tssh_session); cdecl; external libssh;
function ssh_set_pcap_file(session: Tssh_session; pcapfile: Tssh_pcap_file): longint; cdecl; external libssh;

function ssh_userauth_none(session: Tssh_session; username: pchar): longint; cdecl; external libssh;
function ssh_userauth_list(session: Tssh_session; username: pchar): longint; cdecl; external libssh;
function ssh_userauth_try_publickey(session: Tssh_session; username: pchar; pubkey: Tssh_key): longint; cdecl; external libssh;
function ssh_userauth_publickey(session: Tssh_session; username: pchar; privkey: Tssh_key): longint; cdecl; external libssh;

{$ifndef WIN32}
function ssh_userauth_agent(session: Tssh_session; username: pchar): longint; cdecl; external libssh;
{$endif}

function ssh_userauth_publickey_auto_get_current_identity(session: Tssh_session; value: PPchar): longint; cdecl; external libssh;
function ssh_userauth_publickey_auto(session: Tssh_session; username: pchar; passphrase: pchar): longint; cdecl; external libssh;
function ssh_userauth_password(session: Tssh_session; username: pchar; password: pchar): longint; cdecl; external libssh;
function ssh_userauth_kbdint(session: Tssh_session; user: pchar; submethods: pchar): longint; cdecl; external libssh;
function ssh_userauth_kbdint_getinstruction(session: Tssh_session): pchar; cdecl; external libssh;
function ssh_userauth_kbdint_getname(session: Tssh_session): pchar; cdecl; external libssh;
function ssh_userauth_kbdint_getnprompts(session: Tssh_session): longint; cdecl; external libssh;
function ssh_userauth_kbdint_getprompt(session: Tssh_session; i: dword; echo: pchar): pchar; cdecl; external libssh;
function ssh_userauth_kbdint_getnanswers(session: Tssh_session): longint; cdecl; external libssh;
function ssh_userauth_kbdint_getanswer(session: Tssh_session; i: dword): pchar; cdecl; external libssh;
function ssh_userauth_kbdint_setanswer(session: Tssh_session; i: dword; answer: pchar): longint; cdecl; external libssh;
function ssh_userauth_gssapi(session: Tssh_session): longint; cdecl; external libssh;
function ssh_version(req_version: longint): pchar; cdecl; external libssh;
procedure ssh_string_burn(str: Tssh_string); cdecl; external libssh;
function ssh_string_copy(str: Tssh_string): Tssh_string; cdecl; external libssh;
function ssh_string_data(str: Tssh_string): pointer; cdecl; external libssh;
function ssh_string_fill(str: Tssh_string; data: pointer; len: Tsize_t): longint; cdecl; external libssh;
procedure ssh_string_free(str: Tssh_string); cdecl; external libssh;
function ssh_string_from_char(what: pchar): Tssh_string; cdecl; external libssh;
function ssh_string_len(str: Tssh_string): Tsize_t; cdecl; external libssh;
function ssh_string_new(size: Tsize_t): Tssh_string; cdecl; external libssh;
function ssh_string_get_char(str: Tssh_string): pchar; cdecl; external libssh;
function ssh_string_to_char(str: Tssh_string): pchar; cdecl; external libssh;
procedure ssh_string_free_char(s: pchar); cdecl; external libssh;
function ssh_getpass(prompt: pchar; buf: pchar; len: Tsize_t; echo: longint; verify: longint): longint; cdecl; external libssh;

type
  Tssh_event_callback = function(fd: Tsocket_t; revents: longint; userdata: pointer): longint; cdecl;
